[功能] 将logback配置文件分开成logback.xml和logback-base.xml两个文件
关联 #[1531745881522176]将logback配置文件分开成logback.xml和logback-base.xml两个文件 http://192.168.0.96:8090/demo/rdm.html#/story-detail/939050947543040/939050947543042/1531745881522176